--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         <div class="card-back">
              <div class="card-details">
-                 <h2>Its Noxi<br><span>Pro Gamer</span> </h2>
+                 <h2>Its Noxi<br><span>Pro Gamer/Noob Game Designer</span> </h2>
     
              <div class="social-icons">
                  <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
@@ -24,7 +24,7 @@
                  <a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a>
                  <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
                  <a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a>
-                 
+                 <a href="#"><i class="fa fa-hidden-noob-designer" aria-hidden="true"></i></a>
              </div>
              </div>
         </div>
